# last-studio

./: DEPLOYMENT-COMPARISON.md  DEPLOYMENT.md  DROPLET-CHECKLIST.md  DROPLET-DEPLOYMENT.md  DROPLET-MANUAL.md  QUICKSTART.md  README.md  SSH-KEYS-GUIDE.md  TERMIUS-SETUP.md  index.html  package-lock.json  package.json  tailwind.config.ts
.do/: app.yaml
deploy/: README.md  deploy.sh  lash-backend.service  lash-backend.socket  nginx.conf  setup.sh
lash-backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_api.py  test_api_direct.py  verify_dates.py
lash-backend/bookings/: admin.py  constants.py  email_service.py  exceptions.py  models.py  services.py  urls.py  views.py
lash-backend/bookings/management/commands/: seed_data.py  show_hours.py  test_api_response.py  test_email.py  test_slots.py  update_addons.py  update_business_hours.py  update_durations.py  verify_dates.py
lash-backend/bookings/migrations/: 0001_initial.py  0002_appointment_location_appointment_needs_transport.py
lash-backend/bookings/serializers/: __init__.py
lash-backend/config/: settings.py
src/: index.css
src/components/: Header.tsx
src/components/booking/: AddOnSelection.tsx  BookingFlow.tsx  BookingReview.tsx  BookingSummary.tsx  ClientTabs.tsx  ConfirmationScreen.tsx  CustomerDetailsForm.tsx  DateSelection.tsx  ProgressIndicator.tsx  (+2 more)
src/constants/: booking.ts
src/data/: services.ts
src/hooks/: useApi.ts  useBookingState.ts  useBookingValidation.ts
src/lib/: api.ts  format.ts
src/pages/: Index.tsx
src/types/: booking.ts
(+10 files in other folders)
