[project]
name = "lash-suite-luxe-backend"
version = "1.0.0"
description = "Backend API for Lash Suite Luxe booking platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Chipo Sithole", email = "chipo@example.com" }
]
dependencies = [
    "django>=5.1.4",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.6.0",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
]

[project.urls]
Repository = "https://github.com/Chipo-Sithole/last-studio"
